<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:nestedScrollingEnabled="true">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cv_avatar_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/default_avatar"
                android:transitionName="@string/transition_category_image"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tv_remaining_tasks_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:transitionName="@string/transition_category_taskcount"

                app:layout_constraintBottom_toTopOf="@+id/tv_category_name"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Tasks: 0" />

        <TextView
                android:id="@+id/tv_category_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:textSize="32sp"

                android:transitionName="@string/transition_category_title"
                app:layout_constraintBottom_toTopOf="@+id/progress_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Work" />

        <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:transitionName="@string/transition_category_progress_bar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_percentage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="90" />

        <TextView
                android:id="@+id/tv_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textAlignment="center"
                android:transitionName="@string/transition_category_percentage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="100%" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>