<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/item_list_detail_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.ListItemDetailFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

            <EditText
                    android:id="@+id/et_subject"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_subtitle" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:errorEnabled="true">

            <EditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="false"
                    android:hint="@string/hint_date"
/>
        </com.google.android.material.textfield.TextInputLayout>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <EditText
                    android:id="@+id/et_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_note_text" />
        </ScrollView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_done"
            android:src="@drawable/ic_done"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:fabCustomSize="40dp"
            android:layout_gravity="bottom|right"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="4dp"
 />
</FrameLayout>