<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_list"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:paddingTop="25dp"
        android:paddingBottom="56dp"
        tools:context=".Activity.MainActivity">


    <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/CustomPopUpStyle"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/main_toolbar_title" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="0.45"
            android:paddingLeft="56dp"
            android:paddingRight="56dp">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cv_avatar_image"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginBottom="32dp"
                android:elevation="8dp"
                android:src="@drawable/work"
                app:layout_constraintBottom_toTopOf="@+id/tv_name"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/default_name"
                android:textSize="28sp"

                app:layout_constraintBottom_toTopOf="@+id/tv_reminder_note"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/tv_reminder_note"
                android:layout_width="200dp"

                android:layout_height="wrap_content"
                android:layout_marginBottom="42dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/default_reminder_note"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_date"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/default_date_text"
                android:textSize="16sp"
                android:textStyle="normal"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/default_date_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager_categories"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"
            android:clipToPadding="false"
            android:foregroundGravity="center"
            android:overScrollMode="never"
            android:paddingLeft="56dp"
            android:paddingRight="56dp"
            android:paddingBottom="16dp" />

</LinearLayout>